@@ -2,6 +2,7 @@
 
 	* Partially update to HEAD of OpenBox3.
 	* Remove focus-follow-mouse.
+	* Finish up AZStacking.
 
 2007-04-04  Yen-Ju Chen <yjchenx at gmail>
 
